JDK11 time decorator (datestamp) logging.